# skills

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude-plugin/: marketplace.json
.github/agents/: skill-creator.md
.github/agents/skill-creator/: AGENT.md
.github/skills/_template/: SKILL.md
.github/skills/audio-to-remotion/: SKILL.md
.github/skills/azure-sdk-mcp-adoption/: README.md  SKILL.md  package.json
.github/skills/copilot-pr-analysis/: README.md  SKILL.md  tsconfig.json
.github/skills/executive-review/: PLAN.md  README.md  SKILL.md  extracted.json  extracted_with_frames.json  pyproject.toml
.github/skills/executive-review/references/: personas.md  question-patterns.md  report-template.md
.github/skills/executive-review/scripts/: analyze.py  detect.py  extract.py  report.py  run.py  utils.py
.github/skills/mgmt-namespace-review/: README.md  REQUIREMENTS.md  SKILL.md  package.json
.github/skills/sprint-update-memo/: SKILL.md  package.json
.github/skills/template/: SKILL.md
skills/audio-to-remotion/: SKILL.md
skills/audio-to-remotion/references/: transcription-details.md
skills/azure-sdk-mcp-adoption/: SKILL.md  package.json
skills/azure-sdk-mcp-adoption/references/: data-sources.md
skills/copilot-pr-analysis/: SKILL.md  package.json
skills/executive-review/: REQUIREMENTS.md  SKILL.md  requirements.txt
skills/mgmt-namespace-review/: SKILL.md
skills/skill-review/: SKILL.md
skills/sprint-update-memo/: REQUIREMENTS.md  SKILL.md
skills/template/: SKILL.md
(+74 files in other folders)
